src/app/components/layer-hover/layer-hover.component.scss
@import 'src/_variables.scss';

.layer-hover {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background: rgb(58 58 58 / .72);
    position: absolute;
    top: 0;
    left: 0;
    transition: all .2s ease-in;

    .add-to-cart {
        width: 200px;
        margin-bottom: 3.2rem;
        padding: 1.2rem;
        background: white;
        font-weight: 600;
        font-size: 1.6rem;
        color: $primary;

        &:hover {
            filter: brightness(90%);
        }
    }
    .actions {
        .action {
            color: $color-white;

            &:not(:last-child) {
                margin-right: 2.0rem;
            }
            &:hover {
                opacity: .8;
            }
            svg-icon {
                vertical-align: middle;
            }
        }
    }
}

